# sgNodeMapper

./: HACKING  Makefile  build.pl  coverage-table.pl  makedist.pl  nodemapper-base.js  nodemapper.js  plaxo-feed_config.txt  plaxo-rel_me_crawler.py  sgnodemapper  test-java.sh  test.pl  url_types.txt
autogen/: README.txt  nodemapper.js  nodemapper_debug.js  nodemapper_tests.js
embedding/cpp/: COPYING  Makefile  Makefile.am  Makefile.in  README  configure  configure.ac  node_mapper.cc  node_mapper.h  sgnodemapper_util.cc
embedding/cpp/lib/: Makefile.am  Makefile.in  node_mapper.cc  node_mapper.h
embedding/cpp/util/: Makefile.am  Makefile.in  sgnodemapper_util.cc
embedding/java/: NodeMapper.java  pom.xml
embedding/java/com/google/code/sgnodemapper/: TestRunner.java
embedding/java/lib/: README
embedding/java/src/main/java/com/google/code/sgnodemapper/: ClassUtils.java  FileUtils.java  NodeMapper.java
embedding/java/src/test/java/com/google/code/sgnodemapper/: NodeMapperTest.java
embedding/perl/lib/SocialGraph/: NodeMapper.pm
embedding/php/: README  config.m4  php_sgnodemapper.cc  php_sgnodemapper.h  sgnodemapper.ini  test.php
sites/: README.txt  amazon.js  aol.js  blogspot.js  facebook.js  flickr.js  google.js  hi5.js  lastfm.js  livejournal.js  meetup.js  myspace.js  nonhttp.js  simple.js  spin-de.js  test.js  threadless.js  tribe.js  twitter.js  yelp.js  zooomr.js
webdemo/: demo.html  demo.js  demo_new.html  demo_new.js  runtests.html  runtests.js
